# ComputoParalelo

./: Bordes.cpp  Busqueda_Tesoro.cpp  Contador_pixels.cpp  GPUMatMul  HistogramaEjercicio.cpp  HistogramaImagen.cpp  Hola_mundoParalel.cpp  Mandelbrot_no_parallel.cpp  Opencv.cpp.txt  Opencv_Paralelo.cpp.txt  README.md  RGBtoBW.cpp  Suma_Paralela.cpp  collapse.cpp
CUDA/: Blur.cu  HelloWorld.cu  Imagenes.cu  MxV.cu  SumaMatriz.cu  SumaVectores.cu
CUDA/FireSimulator/: CMakeLists.txt  fire_kernel.cu  fire_kernel.h  main.cpp
CUDA/Proyecto/: 3er_Parcial.cu  Convertidor_JPG_PGM.py  fff_inv.cu  fft_cuda.cu  fft_cufft.cu  fft_python.py
Examenes/: Ejercicio1.cu  Ejercicio1CUDA.cu  Ejercicio1_1erP.cpp  Ejercicio2CUDA.cu  Ejercicio2_1erP.cpp
Librerias/: READ.md  README.md
